# go-extension-python

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  go.mod  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
docs/: .buildinfo  genindex.html  go_extension.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  go_extension.doctree  index.doctree  modules.doctree
docs_src/: conf.py  go_extension.rst  index.rst  modules.rst
go_extension/: __init__.py  build_ext.py  compiler.py  exceptions.py  extension.py
hello/: main.go
tests/: __init__.py  test_build_ext.py  test_compiler.py  test_extension.py  test_integrated.py  utils.py
