[metadata]
name = go-extension
version = attr: go_extension.__version__
author = Shuhei Nitta
author_email = huisintheta@gmail.com
url = https://github.com/huisint/go-extension-python
description = Include Go packages as a Python extension module
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.10
include_package_data = True
packages = find:
test_suite = tests
install_requires = 
    setuptools>=58.1.0
    pip>=22.1.2
    pybindgen>=0.22.1
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = 
    tests

[mypy]
python_version = 3.10
ignore_missing_imports = True
strict = True


[coverage:run]
omit =
    tests/*

[flake8]
max-line-length = 119
